--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,36 @@
 [buildout]
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.1.x.cfg
+    http://dist.plone.org/release/4.1.3/versions.cfg
+parts +=
+    instance
+    zopepy
+
+develop = .
 
 package-name = collective.geo.bundle
+versions = versions
+
+[instance]
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+environment-vars =
+    zope_i18n_compile_mo_files true
+
+# If you want Zope to know about any additional eggs, list them here.
+# This should include any development eggs you listed in develop-eggs above,
+# e.g. eggs = Plone my.package
+eggs =
+    Plone
+    ${buildout:eggs}
+    collective.geo.bundle
+
+[zopepy]
+# For more information on this step and configuration options see:
+# http://pypi.python.org/pypi/zc.recipe.egg
+recipe = zc.recipe.egg
+eggs = ${instance:eggs}
+interpreter = zopepy
+scripts = zopepy
+
