moved sources to buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,6 @@
 [buildout]
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.1.x.cfg
-    http://dist.plone.org/release/4.1.3/versions.cfg
 parts +=
     instance
     zopepy
@@ -10,6 +9,7 @@ develop = .
 
 package-name = collective.geo.bundle
 versions = versions
+
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -26,6 +26,7 @@ eggs =
     ${buildout:eggs}
     collective.geo.bundle
 
+
 [zopepy]
 # For more information on this step and configuration options see:
 # http://pypi.python.org/pypi/zc.recipe.egg
@@ -34,3 +35,13 @@ eggs = ${instance:eggs}
 interpreter = zopepy
 scripts = zopepy
 
+
+[sources]
+collective.geo.geographer = git https://github.com/collective/collective.geo.geographer.git
+collective.geo.contentlocations = git https://github.com/collective/collective.geo.contentlocations.git
+collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers.git
+collective.geo.settings = svn https://svn.plone.org/svn/collective/collective.geo.settings/trunk
+collective.geo.mapwidget = git https://github.com/collective/collective.geo.mapwidget.git
+collective.z3cform.colorpicker = svn https://svn.plone.org/svn/collective/collective.z3cform.colorpicker/trunk
+collective.geo.kml = git https://github.com/collective/collective.geo.kml.git
+collective.geo.usersmap = git https://github.com/collective/collective.geo.usersmap.git
