--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 /lib/
 /parts/
 /var/
+docs/doctrees/
+docs/html/
 .mr.developer.cfg
 src/collective.geo.contentlocations/
 src/collective.geo.geographer/
