added autointerface module

--- a/sphinx.cfg
+++ b/sphinx.cfg
@@ -12,12 +12,18 @@ parts +=
    sphinx
 
 
+[zopepy]
+eggs +=
+    repoze.sphinx.autointerface
+
+
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
 interpreter = ${buildout:directory}/bin/zopepy
 sphinx-extensions =
     sphinx.ext.autodoc
+    repoze.sphinx.autointerface
 sphinx-project = Collective Geo
 sphinx-author = Giorgio Borelli
-source = ${buildout:directory}/docs-source
+source = ${buildout:directory}/docs
 build = ${buildout:directory}/docs
