--- a/buildout.cfg
+++ b/buildout.cfg
@@ -40,7 +40,7 @@ scripts = zopepy
 collective.geo.geographer = git https://github.com/collective/collective.geo.geographer.git
 collective.geo.contentlocations = git https://github.com/collective/collective.geo.contentlocations.git
 collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers.git
-collective.geo.settings = svn https://svn.plone.org/svn/collective/collective.geo.settings/trunk
+collective.geo.settings = git https://github.com/collective/collective.geo.settings.git
 collective.geo.mapwidget = git https://github.com/collective/collective.geo.mapwidget.git
 collective.z3cform.colorpicker = svn https://svn.plone.org/svn/collective/collective.z3cform.colorpicker/trunk
 collective.geo.kml = git https://github.com/collective/collective.geo.kml.git
