Updating collective.z3cform.colorpicker to point to GitHub

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -42,6 +42,6 @@ collective.geo.contentlocations = git https://github.com/collective/collective.g
 collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers.git
 collective.geo.settings = git https://github.com/collective/collective.geo.settings.git
 collective.geo.mapwidget = git https://github.com/collective/collective.geo.mapwidget.git
-collective.z3cform.colorpicker = svn https://svn.plone.org/svn/collective/collective.z3cform.colorpicker/trunk
+collective.z3cform.colorpicker = git https://github.com/gborelli/collective.z3cform.colorpicker.git
 collective.geo.kml = git https://github.com/collective/collective.geo.kml.git
 collective.geo.usersmap = git https://github.com/collective/collective.geo.usersmap.git
