Adding ipdb to devel buildout

--- a/devel.cfg
+++ b/devel.cfg
@@ -21,6 +21,7 @@ eggs +=
     plone.reload
     Products.PrintingMailHost
     Products.PDBDebugMode
+    ipdb
 zcml +=
    teamrubber.theoracle
    plone.reload
