Ensuring to use test dependencies for c.g.geographer

--- a/devel.cfg
+++ b/devel.cfg
@@ -23,8 +23,8 @@ eggs +=
     Products.PDBDebugMode
     ipdb
 zcml +=
-   teamrubber.theoracle
-   plone.reload
+    teamrubber.theoracle
+    plone.reload
 
 
 [omelette]
@@ -41,5 +41,5 @@ eggs =
     collective.geo.mapwidget
     collective.geo.openlayers
     collective.geo.settings
-    collective.geo.geographer
+    collective.geo.geographer [tests]
     collective.z3cform.colorpicker
