Updating source URLs to be git ssh urls for ease of pushing. This will require removal (or manuallly updating) your existing checkouts for buildout to change their URLs.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,11 +37,11 @@ scripts = zopepy
 
 
 [sources]
-collective.geo.geographer = git https://github.com/collective/collective.geo.geographer.git
-collective.geo.contentlocations = git https://github.com/collective/collective.geo.contentlocations.git
-collective.geo.openlayers = git https://github.com/collective/collective.geo.openlayers.git
-collective.geo.settings = git https://github.com/collective/collective.geo.settings.git
-collective.geo.mapwidget = git https://github.com/collective/collective.geo.mapwidget.git
+collective.geo.geographer = git git@github.com:collective/collective.geo.geographer.git
+collective.geo.contentlocations = git git@github.com:collective/collective.geo.contentlocations.git
+collective.geo.openlayers = git git@github.com:collective/collective.geo.openlayers.git
+collective.geo.settings = git git@github.com:collective/collective.geo.settings.git
+collective.geo.mapwidget = git git@github.com:collective/collective.geo.mapwidget.git
 collective.z3cform.colorpicker = git https://github.com/gborelli/collective.z3cform.colorpicker.git
-collective.geo.kml = git https://github.com/collective/collective.geo.kml.git
-collective.geo.usersmap = git https://github.com/collective/collective.geo.usersmap.git
+collective.geo.kml = git git@github.com:collective/collective.geo.kml.git
+collective.geo.usersmap = git git@github.com:collective/collective.geo.usersmap.git
