Creating separate `test-collectivegeo` section for running all tests. `test` script can be used to just test one or more packages.

--- a/devel.cfg
+++ b/devel.cfg
@@ -11,6 +11,7 @@ always-checkout = force
 
 parts +=
     omelette
+    test-collectivegeo
 
 
 [instance]
@@ -34,7 +35,7 @@ eggs = ${instance:eggs}
 
 [test]
 recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo']
+defaults = ['--auto-color', '--auto-progress']
 eggs =
     collective.geo.contentlocations
     collective.geo.kml
@@ -43,3 +44,8 @@ eggs =
     collective.geo.settings
     collective.geo.geographer [tests]
     collective.z3cform.colorpicker
+
+[test-collectivegeo]
+<= test
+defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo']
+
