Changing to be `test-all` for testing all packages.

--- a/devel.cfg
+++ b/devel.cfg
@@ -11,7 +11,7 @@ always-checkout = force
 
 parts +=
     omelette
-    test-collectivegeo
+    test-all
 
 
 [instance]
@@ -45,7 +45,7 @@ eggs =
     collective.geo.geographer [tests]
     collective.z3cform.colorpicker
 
-[test-collectivegeo]
+[test-all]
 <= test
 defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo']
 
