--- a/devel.cfg
+++ b/devel.cfg
@@ -37,12 +37,12 @@ eggs = ${instance:eggs}
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
 eggs =
-    collective.geo.contentlocations
-    collective.geo.kml
-    collective.geo.mapwidget
-    collective.geo.openlayers
-    collective.geo.settings
-    collective.geo.geographer [tests]
+    collective.geo.contentlocations [test]
+    collective.geo.kml [test]
+    collective.geo.mapwidget [test]
+    collective.geo.openlayers [test]
+    collective.geo.settings [test]
+    collective.geo.geographer [test]
     collective.z3cform.colorpicker
 
 [test-all]
