--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.1.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/plone-4.2.x.cfg
 parts +=
     instance
     zopepy
@@ -24,7 +24,7 @@ environment-vars =
 eggs =
     Plone
     ${buildout:eggs}
-    collective.geo.bundle
+    ${buildout:package-name}
 
 
 [zopepy]
@@ -45,3 +45,5 @@ collective.geo.mapwidget = git git@github.com:collective/collective.geo.mapwidge
 collective.z3cform.colorpicker = git https://github.com/gborelli/collective.z3cform.colorpicker.git
 collective.geo.kml = git git@github.com:collective/collective.geo.kml.git
 collective.geo.usersmap = git git@github.com:collective/collective.geo.usersmap.git
+collective.geo.behaviour = git git@github.com:collective/collective.geo.behaviour.git
+collective.z3cform.mapwidget = git git@github.com:collective/collective.z3cform.mapwidget.git
