Added buildout configuration for Dexterity

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,6 +22,7 @@ environment-vars =
 # This should include any development eggs you listed in develop-eggs above,
 # e.g. eggs = Plone my.package
 eggs =
+    Pillow
     Plone
     ${buildout:eggs}
     ${buildout:package-name}
