--- a/devel.cfg
+++ b/devel.cfg
@@ -4,10 +4,11 @@ extends =
 
 extensions =
     mr.developer
-sources = sources
 
+sources = sources
 auto-checkout = *
 always-checkout = force
+sources-dir = extras
 
 parts +=
     omelette
@@ -17,14 +18,10 @@ parts +=
 [instance]
 debug-mode = on
 eggs +=
-    teamrubber.theoracle
-    Products.Clouseau
     plone.reload
     Products.PrintingMailHost
     Products.PDBDebugMode
-    ipdb
 zcml +=
-    teamrubber.theoracle
     plone.reload
 
 
@@ -48,4 +45,3 @@ eggs =
 [test-all]
 <= test
 defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo']
-
