Added travis-ci configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/plone-4.2.x.cfg
+
 parts +=
     instance
     zopepy
@@ -9,6 +10,7 @@ develop = .
 
 package-name = collective.geo.bundle
 versions = versions
+github-url = git@github.com:
 
 
 [instance]
@@ -38,13 +40,13 @@ scripts = zopepy
 
 
 [sources]
-collective.geo.geographer = git git@github.com:collective/collective.geo.geographer.git
-collective.geo.contentlocations = git git@github.com:collective/collective.geo.contentlocations.git
-collective.geo.openlayers = git git@github.com:collective/collective.geo.openlayers.git
-collective.geo.settings = git git@github.com:collective/collective.geo.settings.git
-collective.geo.mapwidget = git git@github.com:collective/collective.geo.mapwidget.git
-collective.z3cform.colorpicker = git https://github.com/gborelli/collective.z3cform.colorpicker.git
-collective.geo.kml = git git@github.com:collective/collective.geo.kml.git
-collective.geo.usersmap = git git@github.com:collective/collective.geo.usersmap.git
-collective.geo.behaviour = git git@github.com:collective/collective.geo.behaviour.git
-collective.z3cform.mapwidget = git git@github.com:collective/collective.z3cform.mapwidget.git
+collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
+collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git
+collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
+collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
+collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
+collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
+collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
+collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
+collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
+collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
