--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python: "2.7"
 install:
   - python bootstrap.py -c travis.cfg
   - bin/buildout -c travis.cfg -t 3
-script: bin/test
+script: bin/test-all
