added robot framework tests

--- a/devel.cfg
+++ b/devel.cfg
@@ -14,6 +14,8 @@ parts +=
     omelette
     test
     test-all
+    test-bundle
+    robot
 
 
 [instance]
@@ -46,3 +48,17 @@ eggs =
 [test-all]
 <= test
 defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo']
+
+
+[robot]
+recipe = zc.recipe.egg
+eggs =
+    Pillow
+    ${test:eggs}
+    plone.app.robotframework[ride,reload]
+
+[test-bundle]
+<= test
+defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo.bundle']
+eggs =
+    collective.geo.bundle [test]
