changed buildout confiuration

--- a/dexterity.cfg
+++ b/dexterity.cfg
@@ -1,15 +1,13 @@
 [buildout]
-extends = devel.cfg
+extends = development.cfg
+package-extras = [dexterity,test]
+
+
+test-eggs +=
+    collective.geo.behaviour
 
 [instance]
-eggs =
+eggs +=
     Pillow
-    Plone
-    ${buildout:eggs}
-    ${buildout:package-name} [dexterity]
-    plone.reload
-    Products.PrintingMailHost
-    Products.PDBDebugMode
-    ipdb
-zcml =
-    plone.reload
+    plone.app.dexterity [grok,relations]
+    collective.geo.behaviour
