--- a/travis.cfg
+++ b/travis.cfg
@@ -1,6 +1,12 @@
 [buildout]
-extends =
-    buildout.cfg
+extends = https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
+
+package-name = collective.geo.bundle
+package-extras = [test]
+
+allow-hosts +=
+    code.google.com
+    robotframework.googlecode.com
 
 extensions =
     mr.developer
@@ -11,16 +17,7 @@ always-checkout = force
 sources-dir = extras
 github-url = https://github.com/
 
-# avoid timeouts by downloading only from known hosts
-allow-hosts =
-    *.plone.org
-    *.python.org
-    *.zope.org
-    docutils.sourceforge.net
-    effbot.org
-    prdownloads.sourceforge.net
-
-parts =
+parts +=
     test-all
 
 
@@ -36,10 +33,20 @@ eggs =
     collective.geo.geographer [test]
     collective.z3cform.colorpicker
 
+
 [test-all]
 <= test
 defaults = ['--auto-color', '--auto-progress', '-s', 'collective.geo']
 
 
-[versions]
-zc.buildout = 1.6.3
+[sources]
+collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
+collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git
+collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
+collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
+collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
+collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
+collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
+collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
+collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
+collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
