--- a/development.cfg
+++ b/development.cfg
@@ -63,3 +63,16 @@ eggs =
     Pillow
     ${test:eggs}
     plone.app.robotframework[ride,reload]
+
+
+[sources]
+collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
+collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git
+collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
+collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
+collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
+collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
+collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
+collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
+collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
+collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
