changed travis cfg

--- a/travis.cfg
+++ b/travis.cfg
@@ -3,6 +3,14 @@ extends = https://raw.github.com/collective/buildout.plonetest/master/travis-4.x
 
 package-name = collective.geo.bundle
 package-extras = [test]
+test-eggs =
+    collective.geo.contentlocations [test]
+    collective.geo.kml [test]
+    collective.geo.mapwidget [test]
+    collective.geo.openlayers [test]
+    collective.geo.settings [test]
+    collective.geo.geographer [test]
+
 
 allow-hosts +=
     code.google.com
@@ -22,16 +30,7 @@ parts +=
 
 
 [test]
-recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
-eggs =
-    collective.geo.contentlocations [test]
-    collective.geo.kml [test]
-    collective.geo.mapwidget [test]
-    collective.geo.openlayers [test]
-    collective.geo.settings [test]
-    collective.geo.geographer [test]
-    collective.z3cform.colorpicker
 
 
 [test-all]
@@ -45,8 +44,6 @@ collective.geo.contentlocations = git ${buildout:github-url}collective/collectiv
 collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
 collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
 collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
-collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
 collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
-collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
 collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
