changed colorpicker sources

--- a/development.cfg
+++ b/development.cfg
@@ -71,7 +71,7 @@ collective.geo.contentlocations = git ${buildout:github-url}collective/collectiv
 collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
 collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
 collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
-collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
+collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git
 collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
 collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
 collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
