--- a/travis.cfg
+++ b/travis.cfg
@@ -47,3 +47,4 @@ collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.m
 collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
 collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
+collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git
