add robot tests and travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,37 @@
+---
+---
 language: python
 python: 2.7
 env:
   - PLONE_VERSION=4.2
   - PLONE_VERSION=4.3
+  global:
+  - secure: |-
+      Y0f6zgSe+rahJAczZOxICxyNnNH6I4VbtcLOHH85EzHycrTI1IfuP4vqPuKC
+      Ob7r+u2zvRLMA+B5XIneQvlz0OIZooshJDrmcwAy+zMNAvBP3nBnRV9HrdQk
+      VFCQdDalXidLRarTUYouBd64x5dO/sYyWiGFULnIKQ7e1l2T4XI=
+  - secure: |-
+      LA8saPel//h3bu6yw7uQPpeCJz7GaS79fHx3FtodIZI7RWs/Zpb3BxlnfEp2
+      1D8dDClOSJWkcNE+pEXq5uVsC1RWo16OYx1wwrQyRiRKVByIYKJCcNOm14l/
+      P/Sa2LyJx+fI1By/AnXNCAwcuawVHLkySUc2DgZIxetHXrHzO8c=
+  - ROBOT_BUILD_NUMBER=travis-$TRAVIS_BUILD_NUMBER
+  - ROBOT_REMOTE_URL=http://$SAUCE_USERNAME:$SAUCE_ACCESS_KEY@ondemand.saucelabs.com:80/wd/hub
+  matrix:
+  - ROBOT_BROWSER=firefox ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
+  - ROBOT_BROWSER=chrome ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
+  - ROBOT_BROWSER=ie ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID,version:7
 install:
-  - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
-  - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg
-  - bin/buildout -c travis.cfg -N -q -t 3
+- sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
+- mkdir -p buildout-cache/eggs
+- mkdir -p buildout-cache/downloads
+- python bootstrap.py -c travis.cfg
+- bin/buildout -c travis.cfg -N -q -t 3
+- curl -O http://saucelabs.com/downloads/Sauce-Connect-latest.zip
+- unzip Sauce-Connect-latest.zip
+- java -jar Sauce-Connect.jar $SAUCE_USERNAME $SAUCE_ACCESS_KEY -i $TRAVIS_JOB_ID
+  -f CONNECTED &  - JAVA_PID=$!
+before_script:
+- bash -c "while [ ! -f CONNECTED ]; do sleep 2; done"
 script: bin/test-all
+after_script:
+- kill $JAVA_PID
