--- a/travis.cfg
+++ b/travis.cfg
@@ -1,8 +1,13 @@
 [buildout]
-extends = https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
+extends =
+    https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
 package-name = collective.geo.bundle
 package-extras = [test]
+package-pep8-ignores = E501,W402,W801
+package-coverage = 80
+
 test-eggs =
     collective.geo.contentlocations [test]
     collective.geo.kml [test]
@@ -11,10 +16,18 @@ test-eggs =
     collective.geo.settings [test]
     collective.geo.geographer [test]
 
-
 allow-hosts +=
     code.google.com
     robotframework.googlecode.com
+
+parts+=
+    test-all
+    createzopecoverage
+    coverage-sh
+    flake8
+    python-validation-sh
+    css-validation-sh
+    js-validation-sh
 
 extensions =
     mr.developer
@@ -25,12 +38,15 @@ always-checkout = force
 sources-dir = extras
 github-url = https://github.com/
 
-parts +=
-    test-all
+
+[environment]
+ZSERVER_HOST = 0.0.0.0
+ROBOT_ZOPE_HOST = 0.0.0.0
 
 
 [test]
 defaults = ['--auto-color', '--auto-progress']
+environment = environment
 
 
 [test-all]
