--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
 ---
----
 language: python
-python: 2.7
+python: '2.7'
+install:
+- mkdir -p buildout-cache/eggs
+- mkdir -p buildout-cache/downloads
+- sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
+- python bootstrap.py -c travis.cfg
+- bin/buildout -N -t 3 -c travis.cfg
+- curl -O http://saucelabs.com/downloads/Sauce-Connect-latest.zip
+- unzip Sauce-Connect-latest.zip
+- java -jar Sauce-Connect.jar $SAUCE_USERNAME $SAUCE_ACCESS_KEY -i $TRAVIS_JOB_ID
+  -f CONNECTED &
+- JAVA_PID=$!
+before_script:
+- bash -c "while [ ! -f CONNECTED ]; do sleep 2; done"
+script: bin/test-all
+after_script:
+- kill $JAVA_PID
 env:
   - PLONE_VERSION=4.2
   - PLONE_VERSION=4.3
@@ -20,18 +35,3 @@ env:
   - ROBOT_BROWSER=firefox ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
   - ROBOT_BROWSER=chrome ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
   - ROBOT_BROWSER=ie ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID,version:7
-install:
-- sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
-- mkdir -p buildout-cache/eggs
-- mkdir -p buildout-cache/downloads
-- python bootstrap.py -c travis.cfg
-- bin/buildout -c travis.cfg -N -q -t 3
-- curl -O http://saucelabs.com/downloads/Sauce-Connect-latest.zip
-- unzip Sauce-Connect-latest.zip
-- java -jar Sauce-Connect.jar $SAUCE_USERNAME $SAUCE_ACCESS_KEY -i $TRAVIS_JOB_ID
-  -f CONNECTED &  - JAVA_PID=$!
-before_script:
-- bash -c "while [ ! -f CONNECTED ]; do sleep 2; done"
-script: bin/test-all
-after_script:
-- kill $JAVA_PID
