--- a/travis.cfg
+++ b/travis.cfg
@@ -30,6 +30,7 @@ sources-dir = extras
 github-url = https://github.com/
 
 
+
 [environment]
 ZSERVER_HOST = 0.0.0.0
 ROBOT_ZOPE_HOST = 0.0.0.0
@@ -37,7 +38,7 @@ ROBOT_ZOPE_HOST = 0.0.0.0
 
 [test]
 defaults = ['--auto-color', '--auto-progress']
-environment = environment
+# environment = environment
 
 
 [test-all]
