--- a/travis.cfg
+++ b/travis.cfg
@@ -32,13 +32,13 @@ github-url = https://github.com/
 
 
 [environment]
-ZSERVER_HOST = 0.0.0.0
-ROBOT_ZOPE_HOST = 0.0.0.0
+ZSERVER_HOST = 127.0.0.1
+ROBOT_ZOPE_HOST = 127.0.0.1
 
 
 [test]
 defaults = ['--auto-color', '--auto-progress']
-# environment = environment
+environment = environment
 
 
 [test-all]
