--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ env:
       P/Sa2LyJx+fI1By/AnXNCAwcuawVHLkySUc2DgZIxetHXrHzO8c='
   - ROBOT_BUILD_NUMBER=travis-$TRAVIS_BUILD_NUMBER
   - ROBOT_REMOTE_URL=http://$SAUCE_USERNAME:$SAUCE_ACCESS_KEY@ondemand.saucelabs.com:80/wd/hub
+  - ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
   matrix:
-  - ROBOT_BROWSER=firefox ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
-  - ROBOT_BROWSER=chrome ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID
-  - ROBOT_BROWSER=ie ROBOT_DESIRED_CAPABILITIES=tunnel-identifier:$TRAVIS_JOB_ID,version:7
+  - ROBOT_BROWSER=firefox
+  - ROBOT_BROWSER=chrome
+  - ROBOT_BROWSER=ie
