try to remove environment from travis test

--- a/travis.cfg
+++ b/travis.cfg
@@ -38,7 +38,7 @@ ROBOT_ZOPE_HOST = 0.0.0.0
 
 [test]
 defaults = ['--auto-color', '--auto-progress']
-environment = environment
+# environment = environment
 
 
 [test-all]
