changed environment port

--- a/travis.cfg
+++ b/travis.cfg
@@ -32,13 +32,13 @@ github-url = https://github.com/
 
 
 [environment]
-ZSERVER_HOST = 0.0.0.0
-ROBOT_ZOPE_HOST = 0.0.0.0
+ZSERVER_PORT= 8080
+ROBOT_ZOPE_PORT= 8080
 
 
 [test]
 defaults = ['--auto-color', '--auto-progress']
-# environment = environment
+environment = environment
 
 
 [test-all]
@@ -56,3 +56,7 @@ collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
 collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
 collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git
+
+
+[versions]
+plone.app.testing = 4.2.2
