change dexterity cfg

--- a/dexterity.cfg
+++ b/dexterity.cfg
@@ -4,7 +4,7 @@ package-extras = [dexterity,test]
 
 
 test-eggs +=
-    collective.geo.behaviour
+    collective.geo.behaviour [test]
 
 [instance]
 eggs +=
