--- a/dexterity.cfg
+++ b/dexterity.cfg
@@ -9,5 +9,6 @@ test-eggs +=
 [instance]
 eggs +=
     Pillow
-    plone.app.dexterity [grok,relations]
+    plone.app.dexterity
     collective.geo.behaviour
+    plone.app.contenttypes == 1.0
