moved robot tests from c.geo.behaviour

--- a/development.cfg
+++ b/development.cfg
@@ -62,7 +62,7 @@ recipe = zc.recipe.egg
 eggs =
     Pillow
     ${test:eggs}
-    plone.app.robotframework[ride,reload]
+    plone.app.robotframework[ride,reload,debug]
 
 
 [sources]
@@ -76,3 +76,9 @@ collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
 collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
 collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
+
+[versions]
+plone.app.testing = 4.2.4
+plone.app.robotframework = 0.8.2
+robotframework = 2.8.4
+robotsuite = 1.4.3
