--- a/travis.cfg
+++ b/travis.cfg
@@ -12,6 +12,7 @@ test-eggs =
     collective.geo.openlayers [test]
     collective.geo.settings [test]
     collective.geo.geographer [test]
+    collective.geo.behaviour [test]
 
 allow-hosts +=
     code.google.com
@@ -57,6 +58,8 @@ collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.b
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
 collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git
 
-
 [versions]
-plone.app.testing = 4.2.2
+plone.app.testing = 4.2.4
+plone.app.robotframework = 0.8.2
+robotframework = 2.8.4
+robotsuite = 1.4.3
