--- a/development.cfg
+++ b/development.cfg
@@ -40,6 +40,7 @@ eggs +=
     plone.reload
     Products.PrintingMailHost
     Products.PDBDebugMode
+    collective.geo.usersmap
 zcml +=
     plone.reload
 
