Pinned version for zc.recipe.testrunner

--- a/development.cfg
+++ b/development.cfg
@@ -83,3 +83,4 @@ plone.app.testing = 4.2.4
 plone.app.robotframework = 0.8.2
 robotframework = 2.8.4
 robotsuite = 1.4.3
+zc.recipe.testrunner = 2.0.0
