Fixed "zopepy file not found" error and updated Sphinx version

--- a/sphinx.cfg
+++ b/sphinx.cfg
@@ -19,8 +19,9 @@ eggs +=
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
-interpreter = ${buildout:directory}/bin/zopepy
+#interpreter = ${buildout:directory}/bin/zopepy
 sphinx-extensions =
+    Sphinx
     sphinx.ext.autodoc
     repoze.sphinx.autointerface
 sphinx-project = Collective Geo
@@ -29,5 +30,5 @@ source = ${buildout:directory}/docs
 build = ${buildout:directory}/docs
 
 [versions]
-Sphinx=1.2b1
+Sphinx=1.2.2
 
