Remove c.geo.behavior as extra requires and include it as default

--- a/development.cfg
+++ b/development.cfg
@@ -16,9 +16,9 @@ always-checkout = force
 sources-dir = extras
 github-url = git@github.com:
 
-
 package-name = collective.geo.bundle
 package-extras = [test]
+
 test-eggs =
     collective.geo.geographer [test]
     collective.geo.contentlocations [test]
@@ -28,7 +28,7 @@ test-eggs =
     collective.geo.kml [test]
     collective.z3cform.colorpicker
     collective.geo.usersmap [test]
-    collective.geo.behaviour
+    collective.geo.behaviour [test]
     collective.z3cform.mapwidget
 
 develop = .
