ask before pulling; enable omelette

--- a/development.cfg
+++ b/development.cfg
@@ -4,7 +4,7 @@ extends = https://raw.github.com/collective/buildout.plonetest/master/test-5.x.c
 parts +=
     test-all
     robot
-#    omelette
+    omelette
 
 
 extensions =
@@ -12,7 +12,7 @@ extensions =
 
 sources = sources
 auto-checkout = *
-always-checkout = force
+always-checkout = true
 sources-dir = extras
 github-url = git@github.com:
 
