use plone5-branches

--- a/development.cfg
+++ b/development.cfg
@@ -68,14 +68,14 @@ eggs =
 
 [sources]
 collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
-collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git
-collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
+collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git branch=plone5
+collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git branch=plone5
 collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
-collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
+collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git branch=plone5
 collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git
-collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git
-collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git
-collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git
+collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git branch=plone5
+collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git branch=plone5
+collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git branch=plone5
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
 
 [versions]
