use plone5 for collective.geo.geographer

--- a/development.cfg
+++ b/development.cfg
@@ -67,7 +67,7 @@ eggs =
 
 
 [sources]
-collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
+collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git branch=plone5
 collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git branch=plone5
 collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git branch=plone5
 collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
