all extras now use branch master make robot-tests run in new firefox

--- a/development.cfg
+++ b/development.cfg
@@ -67,15 +67,19 @@ eggs =
 
 
 [sources]
-collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git branch=plone5
-collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git branch=plone5
-collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git branch=plone5
-collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
-collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git branch=plone5
-collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git
-collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git branch=plone5
-collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git branch=plone5
-collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git branch=plone5
+collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git branch=master
+collective.geo.contentlocations = git ${buildout:github-url}collective/collective.geo.contentlocations.git branch=master
+collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git branch=master
+collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git branch=master
+collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git branch=master
+collective.z3cform.colorpicker = git ${buildout:github-url}collective/collective.z3cform.colorpicker.git branch=master
+collective.geo.kml = git ${buildout:github-url}collective/collective.geo.kml.git branch=master
+collective.geo.usersmap = git ${buildout:github-url}collective/collective.geo.usersmap.git branch=master
+collective.geo.behaviour = git ${buildout:github-url}collective/collective.geo.behaviour.git branch=master
 collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
 
 [versions]
+# Fix Robottests with newer Firefox
+# robotframework = 3.0
+# robotframework-debuglibrary = 0.4
+selenium = 2.53.1
